Fix overflow issue in about section and adjust margin for skills row

--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ header nav a.active {
 
 #about .about-content-container .column:nth-child(2) {
     width: 20px;
+    overflow:visible
 }
 
 #about .about-content-container .column:nth-child(2) .scroll-indicator {
@@ -353,6 +354,10 @@ header nav a.active {
 #about .about-content-container .skills .about-row:nth-child(1),
 #about .about-content-container .skills .about-row:nth-child(3) {
     margin-left: 35px;
+}
+
+#about .about-content-container .skills .about-row:nth-child(3) {
+    margin-bottom: 10px;
 }
 
 #about .about-content-container .skills .about-row .skill {
